--- a/pyproject.toml
+++ b/pyproject.toml
@@ -3,8 +3,8 @@ requires = ["setuptools>=61.0"]
 build-backend = "setuptools.build_meta"
 
 [project]
-name = "shared-kernel"
-version = "0.0.1"
+name = "dw-shared-kernel"
+version = "0.1.0"
 authors = [
   { name="Panchenko Kirill", email="pnchkirill@gmail.com" },
 ]
@@ -21,8 +21,6 @@ dependencies = [
 
 [project.optional-dependencies]
 local = [
-    "build",
-    "pip-tools",
     "pytest",
     "ipython",
     "invoke",
