--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,7 +4,7 @@ build-backend = "setuptools.build_meta"
 
 [project]
 name = "dw-shared-kernel"
-version = "0.2.0"
+version = "0.3.0"
 authors = [
   { name="Panchenko Kirill", email="pnchkirill@gmail.com" },
 ]
@@ -26,6 +26,7 @@ local = [
     "invoke",
     "ruff",
     "pre-commit",
+    "bumpver",
 ]
 
 [tool.ruff]
@@ -68,7 +69,7 @@ line-ending = "auto"
 docstring-code-format = false
 
 [bumpver]
-current_version = "0.2.0"
+current_version = "0.3.0"
 version_pattern = "MAJOR.MINOR.PATCH"
 
 [bumpver.file_patterns]
