--- a/requirements/requirements.local.txt
+++ b/requirements/requirements.local.txt
@@ -1,6 +1,9 @@
 annotated-types==0.7.0
 asttokens==3.0.0
+bumpver==2024.1130
 cfgv==3.4.0
+click==8.1.8
+colorama==0.4.6
 decorator==5.2.1
 distlib==0.3.9
 executing==2.2.0
@@ -11,6 +14,7 @@ invoke==2.2.0
 ipython==9.0.0
 ipython-pygments-lexers==1.1.1
 jedi==0.19.2
+lexid==2021.1006
 matplotlib-inline==0.1.7
 nodeenv==1.9.1
 packaging==24.2
@@ -29,6 +33,7 @@ pytest==8.3.4
 pyyaml==6.0.2
 ruff==0.9.9
 stack-data==0.6.3
+toml==0.10.2
 traitlets==5.14.3
 typing-extensions==4.12.2
 virtualenv==20.29.2
